--- a/Labs/lab2/lab2.ipynb
+++ b/Labs/lab2/lab2.ipynb
@@ -32,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "operations = pd.read_csv('1 - operations.csv')"
@@ -380,7 +382,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "codec = pd.read_csv('4 - codes.csv', sep=';')"
@@ -467,7 +471,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "types = pd.read_csv('3 - types.csv', sep=';')"
@@ -554,7 +560,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_oper_codec = pd.merge(dataset_oper, codec, on='code')"
@@ -1037,7 +1045,9 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data['datetime'] = data['datetime'].apply(lambda x: datetime.utcfromtimestamp(1483228800+int(int(x.split()[0])*86400)+int(int(x.split()[1].split(':')[0])*3600+int(x.split()[1].split(':')[1])*60+int(x.split()[1].split(':')[2]))).strftime('%Y-%m-%d %H:%M:%S'))"
