--- a/Labs/lab3/PR-lab3.ipynb
+++ b/Labs/lab3/PR-lab3.ipynb
@@ -60,7 +60,7 @@
     "from pyDatalog import pyEngine\n",
     "pyEngine.Logging = True\n",
     "logging.basicConfig(level=logging.INFO)\n",
-    "pyDatalog.create_terms('link, can_reach,X,Y,Z')\n",
+    "pyDatalog.create_terms('link, can_reach,X,Y,Z,U,W, mar, imbreeding')\n",
     "# +link(1,2)\n",
     "# +link(2,3)\n",
     "# +link(2,4)\n",
@@ -77,7 +77,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sqlalchemy.ext.declarative import declarative_base\n",
@@ -113,54 +115,182 @@
     "    \n",
     "# now create the table\n",
     "Base.metadata.create_all(engine)\n",
-    "pyDatalog.create_terms('married, X, c, p')\n",
+    "pyDatalog.create_terms('married, exist, X, c, p')\n",
     "\n",
-    "married(X,Y) <= married(Y,X)\n",
-    "married(X,Y) <= p(X,Z) & p(Y, Z) & (X!=Y) #& (!married())\n",
-    "\n",
-    "John = Employee('John')\n",
-    "Mary = Employee('Mary')\n",
-    "Sam = Employee('Sam')\n",
-    "Michael = Employee('Michael')\n",
-    "Nick = Employee('Nick')\n",
-    "Peter = Employee('Peter')\n"
+    "# married(X,Y) <= married(Y,X)\n",
+    "# mar(X,Y) <= p(X,Z) & p(Y, Z) & (X!=Y) & married(X, Y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Titos = Employee('Titos')\n",
+    "Genna = Employee('Genna')\n",
+    "Cleos = Employee('Cleos')\n",
+    "Kevan = Employee('Kevan')\n",
+    "Lancel = Employee('Lancel')\n",
+    "Tywin = Employee('Tywin')\n",
+    "Joanna = Employee('Joanna')\n",
+    "Tyrion = Employee('Tyrion')\n",
+    "Jaime = Employee('Jaime')\n",
+    "Cercei = Employee('Cercei')\n",
+    "Tommen = Employee('Tommen')\n",
+    "Myrcella = Employee('Myrcella')\n",
+    "Joffrey = Employee('Joffrey')\n",
+    "\n",
+    "+p(Titos,Genna)\n",
+    "+p(Titos,Kevan)\n",
+    "+p(Titos,Tywin)\n",
+    "+p(Genna,Cleos)\n",
+    "+p(Kevan,Lancel)\n",
+    "+p(Tywin, Tyrion)\n",
+    "+p(Tywin, Jaime)\n",
+    "+p(Tywin, Cercei)\n",
+    "+p(Jaime, Tommen)\n",
+    "+p(Jaime, Myrcella)\n",
+    "+p(Jaime, Joffrey)\n",
+    "+p(Cercei, Tommen)\n",
+    "+p(Cercei, Myrcella)\n",
+    "+p(Cercei, Joffrey)\n",
+    "\n",
+    "+married(Tywin,Joanna)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28046e0d417941f3b05fd5e34e2b4ad8",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "A Jupyter Widget"
+       "mar(X,Y) <= p(X,Z)&p(Y,Z)&!=(X,Y)&married(X,Y)"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "p(Z,Y) <= p(X,Y) & married(X,Z)\n",
+    "imbreeding(X,Y) <= p(X,Z) & p(Y,Z)& (X!=Y) & p(W,X) & p(W,Y) \n",
+    "mar(X,Y) <= p(X,Z) & p(Y,Z) & (X!=Y) & married(X,Y) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:pyDatalog.pyEngine:New fact : p('Cercei','Joffrey')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Cercei','Myrcella')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Jaime','Joffrey')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Cercei','Joffrey')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Cercei','Tommen')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Jaime','Joffrey')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Cercei','Tommen')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Jaime','Myrcella')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Jaime','Tommen')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Jaime','Tommen')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Tywin','Cercei')\n",
+      "INFO:pyDatalog.pyEngine:New fact : married('Tywin','Joanna')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Joanna','Cercei')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Tywin','Cercei')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Tywin','Jaime')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Joanna','Cercei')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Joanna','Jaime')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Tywin','Tyrion')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Joanna','Tyrion')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Kevan','Lancel')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Genna','Cleos')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Kevan','Lancel')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Titos','Tywin')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Genna','Cleos')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Titos','Kevan')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Titos','Tywin')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Titos','Genna')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Titos','Genna')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Titos','Kevan')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Tywin','Tyrion')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Joanna','Tyrion')\n",
+      "INFO:pyDatalog.pyEngine:New fact : !=('Joanna','Tywin') is True\n",
+      "INFO:pyDatalog.pyEngine:New fact : !=('Tywin','Joanna') is True\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Tywin','Jaime')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Joanna','Jaime')\n",
+      "INFO:pyDatalog.pyEngine:New fact : !=('Jaime','Cercei') is True\n",
+      "INFO:pyDatalog.pyEngine:New fact : married('Tywin','Joanna')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Joanna','Cercei')\n",
+      "INFO:pyDatalog.pyEngine:New fact : imbreeding('Jaime','Cercei')\n",
+      "INFO:pyDatalog.pyEngine:New fact : _pyD_query3('Jaime','Cercei')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Tywin','Cercei')\n",
+      "INFO:pyDatalog.pyEngine:New fact : !=('Cercei','Jaime') is True\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Joanna','Jaime')\n",
+      "INFO:pyDatalog.pyEngine:New fact : imbreeding('Cercei','Jaime')\n",
+      "INFO:pyDatalog.pyEngine:New fact : _pyD_query3('Cercei','Jaime')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Tywin','Jaime')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Jaime','Myrcella')\n",
+      "INFO:pyDatalog.pyEngine:New fact : p('Cercei','Myrcella')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X      | Y     \n",
+      "-------|-------\n",
+      "Jaime  | Cercei\n",
+      "Cercei | Jaime \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(imbreeding(X, Y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "import math\n",
     "from ipywidgets import interact_manual\n",
-    "# can_reach(X,Y) <= link(X,Z) & can_reach(Z,Y) & (X!=Y)\n",
+    "\n",
     "@interact_manual\n",
-    "def get_input(parent='User', child='User2', ok=True):\n",
-    "    if(ok):\n",
-    "        print('ok')\n",
-    "        +p(parent, child)\n",
-    "        ok = False\n",
-    "    else:\n",
-    "        if(len(p(X, child)) < 2 and (len(married(parent, X)) == 0 or len(married(child, X)) == 0) and (len(p(child, parent))==0)):\n",
-    "            +p(parent, child)\n",
-    "    print(married(X, Y))"
+    "def get_input(parent='User', child='User2'):\n",
+    "    +p(parent, child)\n",
+    "    print(mar(X, Y))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
